--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plataforma de filmes e séries para você e sua família se divertirem.">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>JosyFlix</title>
 </head>
 <body>  
     <header class="menu">
         <img class="menu__logo" src="assets/iconeprincipal.png" alt="Logo da JosyFlix">
-        <nav>
-        <a class="menu__assine">Assine JosyFlix</a> 
-        <a class="menu__entrar">Entrar</a>
+        <nav class="menu__botao">
+        <a class="menu__botao__assinar">Assinar JosyFlix</a> 
+        <a class="menu__botao__entrar">Entrar</a>
         </nav>
     </header>
-    
-    
+    <main></main>
+    <footer></footer>
 </body>
 </html>
