--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>JosyFlix</title>
 </head>
 <body>
+    <section class="container menu__fundo"></section>
     <header class="menu">
         <img class="menu__logo" src="assets/iconeprincipal.png" alt="logo JosyFlix">
         <nav class="menu__botao">
@@ -15,7 +16,10 @@
             <a class="menu__botao__entrar" href="logar.html">Entrar</a>
         </nav>
     </header>
-    <main></main>
+    <main class="conteudo">
+        <h1 class="conteudo__titulo"></h1>
+        <h2 class="texto"></h2>
+    </main>
     <footer></footer>
 </body>
 </html>
