--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         </nav>
     </header>
     <main class="conteudo">
-        <h1 class="conteudo__titulo"></h1>
-        <h2 class="texto"></h2>
+        <h1 class="conteudo__titulo">Sua passagem para entretenimento em qualquer lugar</h1>
+        <h2 class="conteudo__texto">Adquira o seu combo JosyFlix</h2>
+        <a></a>
+
     </main>
     <footer></footer>
 </body>
