--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 </head>
 <body>
     <section class="container menu__fundo"></section>
+    <section class="conteudo">
+        <h1 class="conteudo__titulo">Sua passagem direto para o entretenimento em qualquer lugar</h1>
+        <p class="conteudo__texto">Adquira o seu combo JosyFlix</p>
+        <a class="conteudo__botao__assinar" href="assinar.html">Assine Agora</a>
+    </section>
     <header class="menu">
         <img class="menu__logo" src="assets/iconeprincipal.png" alt="logo JosyFlix">
         <nav class="menu__botao">
-            <a class="menu__botao__assinar" href="assinar.html">Assinar JosyFlix</a>
+            <a class="menu__botao__assinar" href="assinar.html">Assine Agora</a>
             <a class="menu__botao__entrar" href="logar.html">Entrar</a>
         </nav>
+        
     </header>
-    <main class="conteudo">
-        <h1 class="conteudo__titulo">Sua passagem para entretenimento em qualquer lugar</h1>
-        <h2 class="conteudo__texto">Adquira o seu combo JosyFlix</h2>
-        <a></a>
-
-    </main>
+    <main></main>
     <footer></footer>
 </body>
 </html>
