--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
             <a class="menu__botao__assinar" href="assinar.html">Assine Agora</a>
             <a class="menu__botao__entrar" href="logar.html">Entrar</a>
         </nav>
-        
     </header>
-    <main></main>
+    <main class="corpo">
+        <h2 class="corpo__titulo">Escolha o seu combo que cabe no seu bolso</h2>
+        <section class="corpo__valores">
+        <p class="corpo__valores__mensais"><strong>1 mês<br>R$ 30,00</strong> por mês</p>
+        <a class="corpo__botao__assinar">Assine agora</a>
+        <p class="corpo__valores__mensais"><strong>3 meses<br>R$ 20,00</strong> por mês</p>
+        <a class="corpo__botao__assinar">Assine agora</a>
+        <p class="corpo__valores__mensais"><strong>12 meses<br>R$ 15,00</strong> por mês</p>
+        <a class="corpo__botao__assinar">Assine agora</a>
+        <section>
+    </main>
     <footer></footer>
 </body>
 </html>
