--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         </nav>
     </header>
     <main class="corpo">
-        <h2 class="corpo__titulo">Escolha o seu combo que cabe no seu bolso</h2>
-        <section class="corpo__valores">
+        <h2 class="corpo__titulo">Escolha o combo que cabe no seu bolso</h2>
+        <div class="corpo__valores">
         <p class="corpo__valores__mensais"><strong>1 mês<br>R$ 30,00</strong> por mês</p>
-        <a class="corpo__botao__assinar">Assine agora</a>
+        <a class="corpo__botao__assinar" href="assinar.html">Assine agora</a>
         <p class="corpo__valores__mensais"><strong>3 meses<br>R$ 20,00</strong> por mês</p>
-        <a class="corpo__botao__assinar">Assine agora</a>
+        <a class="corpo__botao__assinar" href="assinar.html">Assine agora</a>
         <p class="corpo__valores__mensais"><strong>12 meses<br>R$ 15,00</strong> por mês</p>
-        <a class="corpo__botao__assinar">Assine agora</a>
-        <section>
+        <a class="corpo__botao__assinar" href="assinar.html">Assine agora</a>
+        </div>
     </main>
     <footer></footer>
 </body>
