--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
     <main class="corpo">
         <h2 class="corpo__titulo">Escolha o combo que cabe no seu bolso</h2>
         <div class="corpo__valores">
-        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong">1 mês<br>R$ 30,00</strong> por mês</p>
-        <a class="corpo__botao__assinar" href="assinar.html">Assine agora<br></a>
-        <p class="corpo__valores__mensais"><strong>3 meses<br>R$ 20,00</strong> por mês</p>
-        <a class="corpo__botao__assinar" href="assinar.html">Assine agora</a>
-        <p class="corpo__valores__mensais"><strong>12 meses<br>R$ 15,00</strong> por mês</p>
-        <a class="corpo__botao__assinar" href="assinar.html">Assine agora</a>
+        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong">1 mês<br>R$ 30,00</strong> por mês<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
+        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong">3 meses<br>R$ 20,00</strong> por mês<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
+        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong">12 meses<br>R$ 15,00</strong> por mês<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         <nav></nav>
         </div>
     </main>
