--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <nav></nav>
         </div>
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Hejociara do Vale
+        </p>
+    </footer>
 </body>
 </html>
