--- a/index.html
+++ b/index.html
@@ -25,14 +25,42 @@
         <h2 class="corpo__titulo">Escolha o combo que cabe no seu bolso</h2>
         <div class="corpo__valores">
         <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1"> 3 meses<br></strong><strong class="corpo__valores__strong2">R$ 90,00<br></strong>R$ 30,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
-        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1">5 meses<br></strong><strong class="corpo__valores__strong2">$ 100,00<br></strong>R$ 20,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
+        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1">5 meses<br></strong><strong class="corpo__valores__strong2">R$ 100,00<br></strong>R$ 20,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1">12 meses<br></strong><strong class="corpo__valores__strong2">R$ 180,00</strong>R$ 15,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
-        <nav></nav>
+        </div>
+        <div>
+            <h2>Benefícios em assinar Josyflix</h2>
+            <p>Assista em até 5 telas simultâneas<br>Assista aos conteúdos em 4K<br>Baixe suas séries e filmes favoritos e assista quando e onde você quiser.<br>Crie até 5 perfis diferentes<br>Assista filmes e séries com o JosyFlix party</p>
+        </div>
+        <div>
+            <h2>Disponível nos mais variados dispositivos</h2>
+            <p>Computador</p>
+            <p>TV</p>
+            <p>Celulares e tablets</p>
+            <p>Videogames e outros dispositivos</p>
+        </div>
+        <div>
+            <h2>Perguntas Frequentes</h2>
+            <p>O que é JosyFlix?</p>
+            <p>O que está incluso na JosyFlix?</p>
+            <p>Quais formas de pagamento posso utilizar?</p>
+            <p>Quanto custa JosyFlix?</p>
+            <p>Onde posso assistir?</p>
+            <p>JosyFlix é adequada para crianças?</p>
+
         </div>
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Hejociara do Vale
-        </p>
+        <p>Desenvolvido por Hejociara do Vale</p>
+        <p>Termos e Condições de Uso
+            Política de privacidade
+            Dispositivos compatíveis
+            Ajuda
+            Sobre a JosyFlix
+            ® JosyFlix | Todos os direitos reservados | Serviço de assinatura paga| Conteúdo sujeito a disponibilidade.
+            
+            JosyFlix é um serviço pago, baseado em assinatura e sujeito a termos e condições. Endereço: Rua Fictícia Dinheiro,777, Piso 10, Fictício/BR – CEP 00000-000, Brasil e CNPJ/M 00.000.000/0000-00
+            </p>
     </footer>
 </body>
 </html>
