New assets and update Html and Css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="conteudo__botao__assinar" href="assinar.html">Assine Agora</a>
     </section>
     <header class="menu">
-        <img class="menu__logo" src="assets/iconeprincipal.png" alt="logo JosyFlix">
+        <img class="menu__logo" src="assets/JosyFlixlogo.png" alt="logo JosyFlix">
         <nav class="menu__botao">
             <a class="menu__botao__assinar" href="assinar.html">Assine Agora</a>
             <a class="menu__botao__entrar" href="logar.html">Entrar</a>
@@ -28,18 +28,18 @@
         <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1">5 meses<br></strong><strong class="corpo__valores__strong2">R$ 100,00<br></strong>R$ 20,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1">12 meses<br></strong><strong class="corpo__valores__strong2">R$ 180,00</strong>R$ 15,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         </div>
-        <div>
-            <h2>Benefícios em assinar Josyflix</h2>
-            <p>Assista em até 5 telas simultâneas<br>Assista aos conteúdos em 4K<br>Baixe suas séries e filmes favoritos e assista quando e onde você quiser.<br>Crie até 5 perfis diferentes<br>Assista filmes e séries com o JosyFlix party</p>
+        <div class="corpo2">
+            <h2 class="corpo2__titulo">Benefícios em assinar Josyflix</h2>
+            <p class="corpo2__conteudo">Assista em até 5 telas simultâneas<br>Conteúdos em 4K<br>Baixe suas séries e filmes favoritos<br>Assista quando e onde você quiser<br>Crie até 5 perfis diferentes<br>Assista filmes e séries com o JosyFlix party</p>
         </div>
-        <div>
+        <div class="corpo3">
             <h2>Disponível nos mais variados dispositivos</h2>
             <p>Computador</p>
             <p>TV</p>
             <p>Celulares e tablets</p>
             <p>Videogames e outros dispositivos</p>
         </div>
-        <div>
+        <div class="corpo4">
             <h2>Perguntas Frequentes</h2>
             <p>O que é JosyFlix?</p>
             <p>O que está incluso na JosyFlix?</p>
