update news images

--- a/index.html
+++ b/index.html
@@ -30,24 +30,23 @@
         </div>
         <div class="corpo2">
             <h2 class="corpo2__titulo">Benefícios em assinar Josyflix</h2>
-            <p class="corpo2__conteudo">Assista em até 5 telas simultâneas<br>Conteúdos em 4K<br>Baixe suas séries e filmes favoritos<br>Assista quando e onde você quiser<br>Crie até 5 perfis diferentes<br>Assista filmes e séries com o JosyFlix party</p>
+            <p class="corpo2__conteudo"><img class="corpo2__icone" src="assets/Vector.png">Assista em até 5 telas simultâneas<br><img class="corpo2__icone" src="assets/Vector.png">Conteúdos em 4K<br><img class="corpo2__icone" src="assets/Vector.png">Baixe suas séries e filmes favoritos<br><img class="corpo2__icone" src="assets/Vector.png">Assista quando e onde você quiser<br><img class="corpo2__icone" src="assets/Vector.png">Crie até 5 perfis diferentes<br><img class="corpo2__icone" src="assets/Vector.png">Assista filmes e séries com o JosyFlix party</p>
         </div>
-        <div class="corpo3">
-            <h2>Disponível nos mais variados dispositivos</h2>
-            <p>Computador</p>
-            <p>TV</p>
-            <p>Celulares e tablets</p>
-            <p>Videogames e outros dispositivos</p>
-        </div>
-        <div class="corpo4">
-            <h2>Perguntas Frequentes</h2>
+        <div class="corpo2__dispositivos">
+            <h2 class="corpo2__dispositivos__titulo">Disponível nos mais variados dispositivos</h2>
+            <p class="corpo2__dispositivos__imagens"><img class="computador" src="assets/computer.svg">Computador</p>
+            <p class="corpo2__dispositivos__imagens"><img class="tv" src="assets/Tv.svg">TV</p>
+            <p class="corpo2__dispositivos__imagens"><img class="cellphone" src="assets/cellphone.svg">Celulares e tablets</p>
+            <p class="corpo2__dispositivos__imagens"><img class="joystick" src="assets/joystick.svg">Videogames e outros dispositivos</p>
+            </div>
+            <div>
+            <h2 class="corpo2__titulo">Perguntas Frequentes</h2>
             <p>O que é JosyFlix?</p>
             <p>O que está incluso na JosyFlix?</p>
             <p>Quais formas de pagamento posso utilizar?</p>
             <p>Quanto custa JosyFlix?</p>
             <p>Onde posso assistir?</p>
             <p>JosyFlix é adequada para crianças?</p>
-
         </div>
     </main>
     <footer class="rodape">
@@ -59,8 +58,8 @@
             Sobre a JosyFlix
             ® JosyFlix | Todos os direitos reservados | Serviço de assinatura paga| Conteúdo sujeito a disponibilidade.
             
-            JosyFlix é um serviço pago, baseado em assinatura e sujeito a termos e condições. Endereço: Rua Fictícia Dinheiro,777, Piso 10, Fictício/BR – CEP 00000-000, Brasil e CNPJ/M 00.000.000/0000-00
-            </p>
+            JosyFlix é um serviço pago, baseado em assinatura e sujeito a termos e condições. Endereço: Rua Fictícia Dinheiro,777, Piso 10, Fictício/BR – CEP 00000-000, Brasil e CNPJ/M 00.000.000/0000-00<br>Imagem de fundo: created by FreePik</p>
+            <p> Image XXXX by Mozilla, License: Apache 2.0</p>
     </footer>
 </body>
 </html>
