--- a/index.html
+++ b/index.html
@@ -32,13 +32,24 @@
             <h2 class="corpo2__titulo">Benefícios em assinar Josyflix</h2>
             <p class="corpo2__conteudo"><img class="corpo2__icone" src="assets/Vector.png">Assista em até 5 telas simultâneas<br><img class="corpo2__icone" src="assets/Vector.png">Conteúdos em 4K<br><img class="corpo2__icone" src="assets/Vector.png">Baixe suas séries e filmes favoritos<br><img class="corpo2__icone" src="assets/Vector.png">Assista quando e onde você quiser<br><img class="corpo2__icone" src="assets/Vector.png">Crie até 5 perfis diferentes<br><img class="corpo2__icone" src="assets/Vector.png">Assista filmes e séries com o JosyFlix party</p>
         </div>
-        <div class="corpo2__dispositivos">
-            <h2 class="corpo2__dispositivos__titulo">Disponível nos mais variados dispositivos</h2>
-            <p class="corpo2__dispositivos__imagens"><img class="computador" src="assets/computer.svg">Computador</p>
-            <p class="corpo2__dispositivos__imagens"><img class="tv" src="assets/Tv.svg">TV</p>
-            <p class="corpo2__dispositivos__imagens"><img class="cellphone" src="assets/cellphone.svg">Celulares e tablets</p>
-            <p class="corpo2__dispositivos__imagens"><img class="joystick" src="assets/joystick.svg">Videogames e outros dispositivos</p>
-            </div>
+        <section class="corpo2__dispositivos">
+                <h2 class="corpo2__dispositivos__titulo">Disponível nos mais variados dispositivos</h2>
+                
+                <figure class="corpo2__dispositivos__bloco__imagens">
+                <img class="corpo2__dispositivos__imagens" src="assets/computer.svg" alt="computador">
+                <figcaption class="corpo2__dispositivos__texto__imagem">Computador</figcaption>
+
+                <img class="corpo2__dispositivos__imagens" src="assets/Tv.svg" alt="Televisão">
+                <figcaption class="corpo2__dispositivos__texto__imagem">Televisão</figcaption>
+
+                <img class="corpo2__dispositivos__imagens" src="assets/cellphone.svg" alt="Celular">
+                <figcaption class="corpo2__dispositivos__texto__imagem">Celular</figcaption>
+
+                <img class="corpo2__dispositivos__imagens" src="assets/joystick.svg" alt="JoyStick">
+                <figcaption class="corpo2__dispositivos__texto__imagem">JoyStick</figcaption>
+            </figure>
+           
+            </section>
             <div>
             <h2 class="corpo2__titulo">Perguntas Frequentes</h2>
             <p>O que é JosyFlix?</p>
