--- a/index.html
+++ b/index.html
@@ -22,25 +22,59 @@
         </nav>
     </header>
     <main class="corpo">
-        <h2 class="corpo__titulo">Escolha o combo que cabe no seu bolso</h2>
-        <div class="corpo__valores">
-        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1"> 3 meses<br></strong><strong class="corpo__valores__strong2">R$ 90,00<br></strong>R$ 30,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
-        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1">5 meses<br></strong><strong class="corpo__valores__strong2">R$ 100,00<br></strong>R$ 20,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
-        <p class="corpo__valores__mensais"><strong class="corpo__valores__strong1">12 meses<br></strong><strong class="corpo__valores__strong2">R$ 180,00</strong>R$ 15,00 por mês*<br><a class="corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
-        </div>
-        <div class="corpo2">
-            <h2 class="corpo2__titulo">Benefícios em assinar Josyflix</h2>
-            <p class="corpo2__conteudo"><img class="corpo2__icone" src="assets/Vector.png">Assista em até 5 telas simultâneas<br><img class="corpo2__icone" src="assets/Vector.png">Conteúdos em 4K<br><img class="corpo2__icone" src="assets/Vector.png">Baixe suas séries e filmes favoritos<br><img class="corpo2__icone" src="assets/Vector.png">Assista quando e onde você quiser<br><img class="corpo2__icone" src="assets/Vector.png">Crie até 5 perfis diferentes<br><img class="corpo2__icone" src="assets/Vector.png">Assista filmes e séries com o JosyFlix party</p>
-        </div>
-        <section class="secao__dispositivos">
-            <h2 class="secao__dispositivos__titulo">Disponível nos mais variados dispositivos</h2>
-            <img class="secao__dispositivos__variados" src="assets/cellphone.svg"alt="celular">
-            <img class="secao__dispositivos__variados" src="assets/computer.svg" alt="computador">
-            <img class="secao__dispositivos__variados" src="assets/Tv.svg" alt="televisao">     
-            <img class="secao__dispositivos__variados" src="assets/joystick.svg" alt="joystick">    
-
+        <section class="container__corpo">
+        <h2 class="container__corpo__titulo">Escolha o combo que cabe no seu bolso</h2>
+        <div class="container__corpo__valores">
+        <p class="container__corpo__valores__mensais"><strong class="container__corpo__valores__strong1"> 3 meses<br></strong><strong class="container__corpo__valores__strong2">R$ 90,00<br></strong>R$ 30,00 por mês*<br><a class="container__corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
+        <p class="container__corpo__valores__mensais"><strong class="container__corpo__valores__strong1">5 meses<br></strong><strong class="container__corpo__valores__strong2">R$ 100,00<br></strong>R$ 20,00 por mês*<br><a class="container__corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
+        <p class="container__corpo__valores__mensais"><strong class="container__corpo__valores__strong1">12 meses<br></strong><strong class="container__corpo__valores__strong2">R$ 180,00</strong>R$ 15,00 por mês*<br><a class="container__corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         </section>
-            <div>
+        <section class="corpo2">
+            <h2 class="container__corpo2__titulo">Benefícios em assinar Josyflix</h2>
+            <p class="container__corpo2__conteudo">
+                <ul class="container__corpo2__vantagens">
+                <li>Assista em até 5 telas simultâneas</li>
+                </ul>
+                <ul class="container__corpo2__vantagens">
+                    <li>Conteúdos em 4K</li>
+                </ul>
+                <ul class="container__corpo2__vantagens">
+                    <li>Baixe suas séries e filmes favoritos</li>
+                </ul>
+                <ul class="container__corpo2__vantagens">
+                    <li>Assista quando e onde você quiser</li>
+                </ul>
+                <ul class="container__corpo2__vantagens">
+                    <li>Crie até 5 perfis diferentes</li>
+                </ul>
+                <ul class="container__corpo__vantagens">
+                    <li>Assista filmes e séries com o JosyFlix party</li>
+                </ul>
+                </p>
+            </section>
+            <section class="dispositivos">
+            <h2 class="dispositivos__titulo">Disponível nos dispositivos</h2>
+            <ul class="dispositivos__lista">
+            <li>
+                <img src="assets/Tv.svg" alt="ícone de televisão">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="assets/computer.svg" alt="ícone do computador">
+                <h3 class="lista__item">Computador</h3>
+            </li>
+            <li>
+                <img src="assets/cellphone.svg" alt="ícone do celular">
+                <h3 class="lista__item">Celular ou tablet</h3>
+            </li>
+            <li>
+                <img src="assets/joystick.svg" alt="ícone do joystick">
+                <h3 class="lista__item">Video game</h3>
+            </li>
+            </ul>   
+            </section>
+
+            <section>
             <h2 class="corpo2__titulo">Perguntas Frequentes</h2>
             <p>O que é JosyFlix?</p>
             <p>O que está incluso na JosyFlix?</p>
@@ -48,7 +82,7 @@
             <p>Quanto custa JosyFlix?</p>
             <p>Onde posso assistir?</p>
             <p>JosyFlix é adequada para crianças?</p>
-        </div>
+            </section>
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Hejociara do Vale</p>
