--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <p class="container__corpo__valores__mensais"><strong class="container__corpo__valores__strong1">5 meses<br></strong><strong class="container__corpo__valores__strong2">R$ 100,00<br></strong>R$ 20,00 por mês*<br><a class="container__corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         <p class="container__corpo__valores__mensais"><strong class="container__corpo__valores__strong1">12 meses<br></strong><strong class="container__corpo__valores__strong2">R$ 180,00</strong>R$ 15,00 por mês*<br><a class="container__corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         </section>
-        <section class="corpo2">
+        <section class="container corpo2">
             <h2 class="container__corpo2__titulo">Benefícios em assinar Josyflix</h2>
-            <p class="container__corpo2__conteudo">
+            <p>
                 <ul class="container__corpo2__vantagens">
                 <li>Assista em até 5 telas simultâneas</li>
                 </ul>
@@ -47,13 +47,14 @@
                 <ul class="container__corpo2__vantagens">
                     <li>Crie até 5 perfis diferentes</li>
                 </ul>
-                <ul class="container__corpo__vantagens">
-                    <li>Assista filmes e séries com o JosyFlix party</li>
+                <ul class="container__corpo2__vantagens">
+                    <li>Assista filmes e séries com JosyFlix party</li>
                 </ul>
                 </p>
             </section>
-            <section class="dispositivos">
+            <section class="container dispositivos">
             <h2 class="dispositivos__titulo">Disponível nos dispositivos</h2>
+            <p>
             <ul class="dispositivos__lista">
             <li>
                 <img src="assets/Tv.svg" alt="ícone de televisão">
@@ -72,6 +73,7 @@
                 <h3 class="lista__item">Video game</h3>
             </li>
             </ul>   
+            </p>
             </section>
 
             <section>
