--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="assets/computer.svg" alt="ícone do computador">
+                <img src="assets/computador.svg" alt="ícone do computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
-                <img src="assets/cellphone.svg" alt="ícone do celular">
+                <img src="assets/celular.svg" alt="ícone do celular">
                 <h3 class="lista__item">Celular ou tablet</h3>
             </li>
             <li>
