--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p class="container__corpo__valores__mensais"><strong class="container__corpo__valores__strong1">5 meses<br></strong><strong class="container__corpo__valores__strong2">R$ 100,00<br></strong>R$ 20,00 por mês*<br><a class="container__corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         <p class="container__corpo__valores__mensais"><strong class="container__corpo__valores__strong1">12 meses<br></strong><strong class="container__corpo__valores__strong2">R$ 180,00</strong>R$ 15,00 por mês*<br><a class="container__corpo__botao__assinar" href="assinar.html">Assine agora</a></p>
         </section>
-        <section class="container corpo2">
+        <section class="container__corpo2">
             <h2 class="container__corpo2__titulo">Benefícios em assinar Josyflix</h2>
             <p>
                 <ul class="container__corpo2__vantagens">
@@ -52,16 +52,16 @@
                 </ul>
                 </p>
             </section>
-            <section class="container dispositivos">
+            <section class="container__corpo2 dispositivos">
             <h2 class="dispositivos__titulo">Disponível nos dispositivos</h2>
             <p>
             <ul class="dispositivos__lista">
             <li>
-                <img src="assets/Tv.svg" alt="ícone de televisão">
+                <img src="assets/television.svg" alt="ícone de televisão">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="assets/computador.svg" alt="ícone do computador">
+                <img src="assets/computer.svg" alt="ícone do computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
