added new class and changed the footer

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             </p>
             </section>
 
-            <section>
-            <h2 class="corpo2__titulo">Perguntas Frequentes</h2>
+            <section class="pergunta">
+            <h2 class="container__corpo2__titulo">Perguntas Frequentes</h2>
             <p>O que é JosyFlix?</p>
             <p>O que está incluso na JosyFlix?</p>
             <p>Quais formas de pagamento posso utilizar?</p>
@@ -87,13 +87,13 @@
             </section>
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Hejociara do Vale</p>
-        <p>Termos e Condições de Uso
-            Política de privacidade
+        <p class="rodape__autor">Desenvolvido por Hejociara do Vale</p>
+        <p class="rodape__final da pagina">Termos e Condições de Uso
+            <br>Política de privacidade
             Dispositivos compatíveis
             Ajuda
             Sobre a JosyFlix
-            ® JosyFlix | Todos os direitos reservados | Serviço de assinatura paga| Conteúdo sujeito a disponibilidade.
+            <br>® JosyFlix | Todos os direitos reservados | Serviço de assinatura paga| Conteúdo sujeito a disponibilidade.
             
             JosyFlix é um serviço pago, baseado em assinatura e sujeito a termos e condições. Endereço: Rua Fictícia Dinheiro,777, Piso 10, Fictício/BR – CEP 00000-000, Brasil e CNPJ/M 00.000.000/0000-00<br>Imagem de fundo: created by FreePik</p>
             <p> Image XXXX by Mozilla, License: Apache 2.0</p>
