added new class: pergunta

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </main>
     <footer class="rodape">
         <p class="rodape__autor">Desenvolvido por Hejociara do Vale</p>
-        <p class="rodape__final da pagina">Termos e Condições de Uso
+        <p class="rodape__links">Termos e Condições de Uso
             <br>Política de privacidade
             Dispositivos compatíveis
             Ajuda
