--- a/index.html
+++ b/index.html
@@ -87,17 +87,14 @@
             </section>
     </main>
     <footer class="rodape">
-        <p class="rodape__autor">Desenvolvido por Hejociara do Vale</p>
-        <p class="rodape__links">Termos e Condições de Uso
-            <br>Política de privacidade
-            Dispositivos compatíveis
-            Ajuda
-            Sobre a JosyFlix
-            <br>® JosyFlix | Todos os direitos reservados | Serviço de assinatura paga| Conteúdo sujeito a disponibilidade.
-            
-            JosyFlix é um serviço pago, baseado em assinatura e sujeito a termos e condições. Endereço: Rua Fictícia Dinheiro,777, Piso 10, Fictício/BR – CEP 00000-000, Brasil e CNPJ/M 00.000.000/0000-00<br>Imagem de fundo: created by FreePik</p>
+        <h4 class="rodape__autor">Desenvolvido por Hejociara do Vale</p>
+        <p class="rodape__links">Termos e Condições de Uso | Política de privacidade | Dispositivos compatíveis | Ajuda | Sobre a JosyFlix
+            <p>® JosyFlix Todos os direitos reservados | Serviço de assinatura paga | Conteúdo sujeito a disponibilidade.
+            </p>
+            <p>JosyFlix é um serviço pago, baseado em assinatura e sujeito a termos e condições. 
+            </p>Endereço: Rua Fictícia Dinheiro,777, Piso 10, Fictício/BR – CEP 00000-000, Brasil e CNPJ 00.000.000/0000-00<br>Imagem de fundo: created by FreePik</p>
             <p> Image XXXX by Mozilla, License: Apache 2.0</p>
-            
+        <p></p>
     </footer>
 </body>
 </html>
