--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
 
             <section class="pergunta">
             <h2 class="container__corpo2__titulo">Perguntas Frequentes</h2>
-            <p>O que é JosyFlix?</p>
+            <div class="container__corpo2__pergunta__frequente">
+            <h3 class="container__pergunta">O que é JosyFlix?</h3> 
+            <button type="button" onclick="document.getElementById('texto__escondido').style.display='none'"><img class="seta" src="assets/setaBaixo.svg"></button>
+            <button type="button" onclick="document.getElementById('texto__escondido').style.display='block'"><img class="seta" src="assets/setaBaixo.svg"></button>
+            <p id="texto__escondido">JosyFlix é o seu bilhete dourado para um mundo de entretenimento sem limites. É uma plataforma de streaming que oferece uma vasta e diversificada biblioteca de filmes, séries, documentários e conteúdo exclusivo, tudo disponível na ponta dos seus dedos. Com JosyFlix, você pode mergulhar em aventuras emocionantes, explorar mundos mágicos, e desfrutar de histórias cativantes que irão mantê-lo entretido e ansioso por mais. Não importa o seu gosto, JosyFlix tem algo para todos, tornando-o o destino definitivo para sua diversão e entretenimento.</p>
+            </div>
             <p>O que está incluso na JosyFlix?</p>
             <p>Quais formas de pagamento posso utilizar?</p>
             <p>Quanto custa JosyFlix?</p>
